force-app/main/default/objects/ProductMaster__c/fields/AnnualBulkBillingProduct__c.field-meta.xml
<CustomField>
    <fullName>AnnualBulkBillingProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>年一括請求用商品</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>年一括請求用商品</relationshipLabel>
    <relationshipName>AnnualBulkBillingProducts</relationshipName>
    <type>Lookup</type>
</CustomField>