force-app/main/default/objects/ProductMaster__c/fields/AnnualMonthlyProduct__c.field-meta.xml
<CustomField>
    <fullName>AnnualMonthlyProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>年契約月額按分用商品</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>年契約月額按分用商品</relationshipLabel>
    <relationshipName>AnnualMonthlyProducts</relationshipName>
    <type>Lookup</type>
</CustomField>