force-app/main/default/objects/ProductMaster__c/fields/BillingTiming__c.field-meta.xml
<CustomField>
    <fullName>BillingTiming__c</fullName>
    <label>請求タイミング</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>毎月</fullName>
            </value>
            <value>
                <fullName>年一括</fullName>
            </value>
            <value>
                <fullName>初回のみ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>