force-app/main/default/objects/ProductMaster__c/fields/Freee_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Freee_Item_Id__c</fullName>
    <label>freee品目ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>