force-app/main/default/objects/ProductMaster__c/fields/InvoiceLineDisplayType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLineDisplayType__c</fullName>
    <label>請求明細表示区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>個別表示</fullName>
            </value>
            <value>
                <fullName>年間利用料に集約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>