force-app/main/default/objects/ProductMaster__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>標準単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>