force-app/main/default/objects/ProductMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProductType__c</columns>
    <columns>BillingTiming__c</columns>
    <columns>UnitPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべての商品マスタ</label>
</ListView>